# UtilityLibrary

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  UtilityLibrary.sln  UtilityLibrary.vcxproj  UtilityLibrary.vcxproj.filters
.github/workflows/: CI.yml  build.yml  distribute.yml  publish.yml  release.yml  tests.yml
Tests/: CMakeLists.txt  Main.cpp
Tests/TestCases/: Arguments.h  TestCSVParser.cpp  TestConsoleArgumentParser.cpp  TestFiles.cpp  TestPatternParser.cpp  TestStrings.cpp  TestTimers.cpp  TestUUID.cpp
Tests/data/: test.csv
Tests/src/: Utility.cpp
docs/: _base64_8h.html  _base64_8h.js  _base64_8h_source.html  _c_s_v_parser_8h.html  _c_s_v_parser_8h.js  _c_s_v_parser_8h_source.html  _concepts_8h.html  _concepts_8h.js  _concepts_8h_source.html  _console_argument_parser_8h.html  _console_argument_parser_8h.js  _console_argument_parser_8h_source.html  _console_argument_parser_8inl.html  _console_argument_parser_8inl_source.html  _defines_8h.html  _defines_8h.js  _defines_8h_source.html  _files_8h.html  _files_8h.js  _files_8h_source.html  _files_8inl.html  _files_8inl.js  _files_8inl_source.html  _pattern_parser_8h.html  _pattern_parser_8h.js  _pattern_parser_8h_source.html  _pattern_parser_8inl.html  _pattern_parser_8inl_source.html  _strings_8h.html  _strings_8h.js  _strings_8h_source.html  _timers_8h.html  _timers_8h.js  _timers_8h_source.html  _u_u_i_d_8h.html  _u_u_i_d_8h.js  _u_u_i_d_8h_source.html  annotated.html  annotated_dup.js  classes.html  (+65 more)
docs/html/: _concepts_8h_source.html  _console_argument_parser_8h_source.html  _console_argument_parser_8inl_source.html  _defines_8h_source.html  _files_8h_source.html  _files_8inl_source.html  _strings_8h_source.html  annotated.html  classes.html  classutility_1_1parsers_1_1_console_argument_parser-members.html  classutility_1_1parsers_1_1_console_argument_parser.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/search/: classes_0.js
docs/search/: all_0.js  all_1.js  all_10.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  defines_0.js  enums_0.js  enumvalues_1.js  enumvalues_3.js  files_0.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+9 more)
include/: Base64.h  CSVParser.h  Concepts.h  ConsoleArgumentParser.h  ConsoleArgumentParser.inl  Defines.h  Files.h  Files.inl  PatternParser.h  PatternParser.inl  Strings.h  Timers.h  UUID.h
src/: Base64.cpp  CSVParser.cpp  Concepts.h  ConsoleArgumentParser.cpp  Files.cpp  Files.h  Files.inl  Strings.cpp  Strings.h  Timers.cpp  UUID.cpp  defines.h
tests/: CMakeLists.txt  Main.cpp  README.md
tests/TestCases/: TestCSVParser.cpp  TestConsoleArgumentParser.cpp  TestFiles.cpp  TestStrings.cpp  TestTimers.cpp
tests/include/: Utility.h
tests/src/: Utility.cpp
